# solarpark

./: .env.example  .gitattributes  .gitignore  Cargo.toml  deno.json  index.html  justfile  rust-toolchain.toml  serve.mts
.github/: README.md
.github/workflows/: check.yml  deploy.yml
src/: lib.rs
