[package]
name = "solarpark"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
solar-ast = "0.1.8"
solar-config = "0.1.8"
solar-interface = "0.1.8"
solar-parse = "0.1.8"
solar-sema = "0.1.8"
alloy-primitives = "1"
wasm-bindgen = "=0.2.100"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
